Progress Bar Save Function v1

--- a/src/blocks/progress-bar/style.scss
+++ b/src/blocks/progress-bar/style.scss
@@ -17,6 +17,11 @@
         }
     }
 
+    #container {
+        width: 300px;
+        height: 150px;
+    }
+
     .wp-themeisle-block-progress-bar__bar {
         width: 100%;
         background-color: #dcd7ca;
