Progress Bar Save Function v2

--- a/src/blocks/progress-bar/editor.scss
+++ b/src/blocks/progress-bar/editor.scss
@@ -17,6 +17,10 @@
         }
     }
 
+    #container {
+        width: 100%;
+    }
+
     .wp-themeisle-block-progress-bar__bar {
         width: 100%;
         background-color: #dcd7ca;
