--- a/src/blocks/section/style.scss
+++ b/src/blocks/section/style.scss
@@ -63,18 +63,20 @@
 		}
 	}
 
-	&.has-vertical-center {
-		.innerblocks-wrap {
-			align-items: center;
-		}
-	}	
-
 	&.has-vertical-flex-end {
 		.innerblocks-wrap {
 			align-items: flex-end;
 		}
 	}
 
+}
+
+@media ( min-width: 600px ) {
+	&.has-vertical-center {
+		.innerblocks-wrap {
+			align-items: center;
+		}
+	}	
 }
 
 @media ( min-width: 960px ) {
@@ -414,7 +416,7 @@
 		position: relative;
 
 		.innerblocks-wrap {
-			display: grid;
+			display: flex;
 			flex-basis: 100%;
 			word-break: keep-all;
 
