Hide Resize points from Preview
For some weird reasons, Resizable component's resize markers were
appearing in the preview. It closes https://github.com/Codeinwp/gutenberg-blocks/issues/419

--- a/src/components/template-library/editor.scss
+++ b/src/components/template-library/editor.scss
@@ -304,6 +304,12 @@
 				.wp-block {
 					max-width: none;
 				}
+
+				.components-resizable-box__handle {
+					&:after {
+						display: none;
+					}
+				}
 			}
 		}
 
