--- a/src/blocks/progress-bar/style.scss
+++ b/src/blocks/progress-bar/style.scss
@@ -33,7 +33,7 @@ p {
   position: absolute;
   top: 0;
   left: 0;
-  width: 110px;
+  width: auto;
   font-weight: bold;
   font-size: 13px;
   color: #ffffff;
@@ -47,7 +47,9 @@ p {
 }
 
 .skillbar-title span {
-  display: block;
+  display: flex;
+  align-items: center;
+  width: 100%;
   background: rgba(0, 0, 0, 0.1);
   padding: 0 20px;
   height: 35px;
@@ -73,6 +75,7 @@ p {
   -webkit-border-radius: 3px;
 
   .skillbar-tooltip {
+      font-size: 12px;
       float: right;
       bottom: 40px;
       left: 20px;
@@ -104,6 +107,8 @@ p {
 }
 
 .skill-bar-percent {
+  display: flex;
+  align-items: center;
   position: absolute;
   right: 10px;
   top: 0;
