--- a/src/blocks/progress-bar/editor.scss
+++ b/src/blocks/progress-bar/editor.scss
@@ -1,14 +1,37 @@
-body {
-    font-family: sans-serif;
-  }
+.wp-themeisle-progress-bar-block {
+  
+  display: flex;
+  flex-direction: column;
+  font-family: sans-serif;
+  
   
   p {
     color: #525252;
     font-size: 12px;
   }
+
+  .wp-themeisle-progress-bar-outer-content {
+    display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-bottom: .25em;
+
+        .wp-themeisle-block-progress-bar-outer-content__title {
+            margin: 0px;
+            display: grid;
+            align-items: center;
+        }
+
+        .wp-themeisle-block-progress-bar-outer-content__value {
+            margin-left: auto;
+            display: grid;
+            align-items: center;
+        }
+  }
   
-  .skillbar {
+  .wp-themeisle-skillbar {
     position: relative;
+    width: 100%;
     display: block;
     margin-bottom: 15px;
     width: 100%;
@@ -27,9 +50,65 @@ body {
     -ms-transition-property: width, background-color;
     -o-transition-property: width, background-color;
     transition-property: width, background-color;
+
+    .wp-themeisle-skill-bar-percent {
+      display: flex;
+      align-items: center;
+      position: absolute;
+      right: 10px;
+      top: 0;
+      font-size: 11px;
+      height: 35px;
+      line-height: 35px;
+      color: #ffffff;
+      color: rgba(0, 0, 0, 0.4);
+    }
+    
+    .wp-themeisle-skillbar-bar {
+      width: 110px;
+      height: 35px;
+      background: #6adcfa;
+      border-radius: 3px;
+      -moz-border-radius: 3px;
+      -webkit-border-radius: 3px;
+      
+    
+  
+      .wp-themeisle-skillbar-tooltip {
+          font-size: 12px;
+          float: right;
+          bottom: 40px;
+          left: 20px;
+          color: white;
+          transition: all 1s;
+          position: relative;
+          padding: 4px 10px 7px 10px;
+          background-color: rgba(67, 66, 76, 0.81);
+          border-radius: 2px;
+          line-height: 20px;
+  
+          .wp-themeisle-skillbar-arrow {
+              width: 0;
+              height: 0;
+              position: absolute;
+              content: "";
+              bottom: -5px;
+              left: 0;
+              right: 0;
+              margin: auto;
+              display: block;
+              border-style: solid;
+              border-width: 5px 5px 0 5px;
+              border-color: rgba(67, 66, 76, 0.81) transparent transparent transparent;
+            }
+            
+        }
+        
+    }
+    
   }
   
-  .skillbar-title {
+  .wp-themeisle-skillbar-title {
     position: absolute;
     top: 0;
     left: 0;
@@ -46,7 +125,7 @@ body {
     border-bottom-left-radius: 3px;
   }
   
-  .skillbar-title span {
+  .wp-themeisle-skillbar-title span {
     display: flex;
     align-items: center;
     width: 100%;
@@ -62,60 +141,10 @@ body {
     border-bottom-left-radius: 3px;
   }
   
-  .skillbar-title.transparent span {
+  .wp-themeisle-skillbar-title.transparent span {
     background: transparent;
   }
-  
-  .skillbar-bar {
-    width: 110px;
-    height: 35px;
-    background: #6adcfa;
-    border-radius: 3px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
 
-    .skillbar-tooltip {
-        font-size: 12px;
-        float: right;
-        bottom: 40px;
-        left: 20px;
-        color: white;
-        transition: all 1s;
-        position: relative;
-        padding: 4px 10px 7px 10px;
-        background-color: rgba(67, 66, 76, 0.81);
-        border-radius: 2px;
-        line-height: 20px;
 
-        .skillbar-arrow {
-            width: 0;
-            height: 0;
-            position: absolute;
-            content: "";
-            bottom: -5px;
-            left: 0;
-            right: 0;
-            margin: auto;
-            display: block;
-            border-style: solid;
-            border-width: 5px 5px 0 5px;
-            border-color: rgba(67, 66, 76, 0.81) transparent transparent transparent;
-          }
-          
-      }
-      
-  }
-  
-  .skill-bar-percent {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    right: 10px;
-    top: 0;
-    font-size: 11px;
-    height: 35px;
-    line-height: 35px;
-    color: #ffffff;
-    color: rgba(0, 0, 0, 0.4);
-  }
+} 
   
