--- a/src/blocks/progress-bar/style.scss
+++ b/src/blocks/progress-bar/style.scss
@@ -1,151 +1,115 @@
-.wp-themeisle-progress-bar-block {
-  
-  display: flex;
-  flex-direction: column;
-  font-family: sans-serif;
-  
-  
-  p {
-    color: #525252;
-    font-size: 12px;
-  }
+.wp-block-themeisle-blocks-progress-bar {
+	display: flex;
+	flex-direction: column;
 
-  .wp-themeisle-progress-bar-outer-content {
-    display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-bottom: .25em;
+	.wp-block-themeisle-blocks-progress-bar__outer {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		margin-bottom: .25em;
 
-        .wp-themeisle-block-progress-bar-outer-content__title {
-            margin: 0px;
-            display: grid;
-            align-items: center;
-        }
+		.wp-block-themeisle-blocks-progress-bar__outer__title {
+			margin: 0px;
+			display: grid;
+			align-items: center;
+		}
 
-        .wp-themeisle-block-progress-bar-outer-content__value {
-            margin-left: auto;
-            display: grid;
-            align-items: center;
-        }
-  }
-  
-  .wp-themeisle-progress-bar-skillbar {
-    position: relative;
-    width: 100%;
-    display: block;
-    margin-bottom: 15px;
-    width: 100%;
-    background: #eee;
-    height: 35px;
-    border-radius: 5px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -webkit-transition: 0.4s linear;
-    -moz-transition: 0.4s linear;
-    -ms-transition: 0.4s linear;
-    -o-transition: 0.4s linear;
-    transition: 0.4s linear;
-    -webkit-transition-property: width, background-color;
-    -moz-transition-property: width, background-color;
-    -ms-transition-property: width, background-color;
-    -o-transition-property: width, background-color;
-    transition-property: width, background-color;
+		.wp-block-themeisle-blocks-progress-bar__outer__value {
+			margin-left: auto;
+			display: grid;
+			align-items: center;
+		}
+	}
 
-    .wp-themeisle-progress-bar-skill-bar-percent {
-      display: flex;
-      align-items: center;
-      position: absolute;
-      right: 10px;
-      top: 0;
-      font-size: 11px;
-      height: 35px;
-      line-height: 35px;
-      color: #ffffff;
-      color: rgba(0, 0, 0, 0.4);
-    }
-    
-    .wp-themeisle-progress-bar-skillbar-bar {
-      width: 110px;
-      height: 35px;
-      background: #6adcfa;
-      border-radius: 5px;
-      -moz-border-radius: 3px;
-      -webkit-border-radius: 3px;
-      
-    
-  
-      .wp-themeisle-progress-bar-skillbar-tooltip {
-          font-size: 12px;
-          float: right;
-          bottom: 40px;
-          left: 20px;
-          color: white;
-          transition: all 1s;
-          position: relative;
-          padding: 4px 10px 7px 10px;
-          background-color: rgba(67, 66, 76, 0.81);
-          border-radius: 2px;
-          line-height: 20px;
-  
-          .wp-themeisle-progress-bar-skillbar-arrow {
-              width: 0;
-              height: 0;
-              position: absolute;
-              content: "";
-              bottom: -5px;
-              left: 0;
-              right: 0;
-              margin: auto;
-              display: block;
-              border-style: solid;
-              border-width: 5px 5px 0 5px;
-              border-color: rgba(67, 66, 76, 0.81) transparent transparent transparent;
-            }
-            
-        }
-        
-    }
-    
-  }
-  
-  .wp-themeisle-progress-bar-skillbar-title {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: auto;
-    font-weight: bold;
-    font-size: 13px;
-    color: #ffffff;
-    background: #6adcfa;
-    -webkit-border-top-left-radius: 3px;
-    -webkit-border-bottom-left-radius: 4px;
-    -moz-border-radius-topleft: 3px;
-    -moz-border-radius-bottomleft: 3px;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-  }
-  
-  .wp-themeisle-progress-bar-skillbar-title span {
-    display: flex;
-    align-items: center;
-    border-radius: 5px 0px 0px 5px;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.1);
-    padding: 0 20px;
-    height: 35px;
-    line-height: 35px;
-    -webkit-border-top-left-radius: 3px;
-    -webkit-border-bottom-left-radius: 3px;
-    -moz-border-radius-topleft: 3px;
-    -moz-border-radius-bottomleft: 3px;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-  }
-  
-  .wp-themeisle-progress-bar-skillbar-title.transparent span {
-    background: transparent;
-  }
+	.wp-block-themeisle-blocks-progress-bar__area {
+		position: relative;
+		width: 100%;
+		display: block;
+		margin-bottom: 15px;
+		width: 100%;
+		background: #eee;
+		height: 35px;
+		border-radius: 5px;
+		transition: 0.4s linear;
+		transition-property: width, background-color;
 
+		.wp-block-themeisle-blocks-progress-bar__progress {
+			display: flex;
+			align-items: center;
+			position: absolute;
+			right: 10px;
+			top: 0;
+			font-size: 11px;
+			height: 35px;
+			line-height: 35px;
+			color: #ffffff;
+			color: rgba(0, 0, 0, 0.4);
+		}
 
-} 
-  
+		.wp-block-themeisle-blocks-progress-bar__area__bar {
+			width: 110px;
+			height: 35px;
+			background: #6adcfa;
+			border-radius: 5px;
+
+			.wp-block-themeisle-blocks-progress-bar__area__tooltip {
+				font-size: 12px;
+				float: right;
+				bottom: 40px;
+				left: 20px;
+				color: white;
+				transition: all 1s;
+				position: relative;
+				padding: 4px 10px 7px 10px;
+				background-color: rgba(67, 66, 76, 0.81);
+				border-radius: 2px;
+				line-height: 20px;
+	
+				.wp-block-themeisle-blocks-progress-bar__area__arrow {
+					width: 0;
+					height: 0;
+					position: absolute;
+					content: "";
+					bottom: -5px;
+					left: 0;
+					right: 0;
+					margin: auto;
+					display: block;
+					border-style: solid;
+					border-width: 5px 5px 0 5px;
+					border-color: rgba(67, 66, 76, 0.81) transparent transparent transparent;
+				}
+			}
+		}
+	}
+
+	.wp-block-themeisle-blocks-progress-bar__area__title {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: auto;
+		font-weight: bold;
+		font-size: 13px;
+		color: #ffffff;
+		background: #6adcfa;
+		border-radius: 3px;
+
+		&.transparent {
+			span {
+				background: transparent;
+			}
+		}
+
+		span {
+			display: flex;
+			align-items: center;
+			border-radius: 5px 0px 0px 5px;
+			width: 100%;
+			background: rgba(0, 0, 0, 0.1);
+			padding: 0 20px;
+			height: 35px;
+			line-height: 35px;
+			border-radius: 3px;
+		}
+	}
+}
