Add frontend CSS

--- a/src/blocks/progress-bar/style.scss
+++ b/src/blocks/progress-bar/style.scss
@@ -54,6 +54,7 @@
 
 			.wp-block-themeisle-blocks-progress-bar__area__tooltip {
 				font-size: 12px;
+				min-width: 40px;
 				float: right;
 				bottom: 40px;
 				left: 20px;
