Fix Progress Bar Width v0.8.8

--- a/src/blocks/progress-bar/style.scss
+++ b/src/blocks/progress-bar/style.scss
@@ -48,6 +48,7 @@
 
 		.wp-block-themeisle-blocks-progress-bar__area__bar {
 			height: 35px;
+			width: 0px;
 			background: #6adcfa;
 			border-radius: 5px;
 
