--- a/src/blocks/progress-bar/style.scss
+++ b/src/blocks/progress-bar/style.scss
@@ -2,6 +2,10 @@
 	display: flex;
 	flex-direction: column;
 
+	&.only-tooltip-on-outer {
+		margin-top: 43px;
+	}
+
 	.wp-block-themeisle-blocks-progress-bar__outer {
 		display: flex;
 		flex-direction: row;
@@ -33,24 +37,34 @@
 		transition: 0.4s linear;
 		transition-property: width, background-color;
 
-		.wp-block-themeisle-blocks-progress-bar__progress {
-			display: flex;
-			align-items: center;
-			position: absolute;
-			right: 10px;
-			top: 0;
-			font-size: 11px;
-			height: 35px;
-			line-height: 35px;
-			color: #ffffff;
-			color: rgba(0, 0, 0, 0.4);
-		}
+		
 
 		.wp-block-themeisle-blocks-progress-bar__area__bar {
 			height: 35px;
 			width: 0px;
 			background: #6adcfa;
 			border-radius: 5px;
+
+			.wp-block-themeisle-blocks-progress-bar__progress {
+				display: flex;
+				align-items: center;
+				justify-content: flex-end;
+				position: relative;
+				right: 10px;
+				left: 0px;
+				top: 0;
+				font-size: 11px;
+				margin-right: 5px;
+				height: 35px;
+				line-height: 35px;
+				color: #ffffff;
+				color: rgba(0, 0, 0, 0.4);
+				opacity: 0;
+
+				&.show {
+					opacity: 1;
+				}
+			}
 
 			.wp-block-themeisle-blocks-progress-bar__area__tooltip {
 				font-size: 12px;
@@ -65,6 +79,11 @@
 				background-color: rgba(67, 66, 76, 0.81);
 				border-radius: 2px;
 				line-height: 20px;
+				opacity: 0;
+
+				&.show {
+					opacity: 1;
+				}
 	
 				.wp-block-themeisle-blocks-progress-bar__area__arrow {
 					width: 0;
