--- a/src/blocks/progress-bar/style.scss
+++ b/src/blocks/progress-bar/style.scss
@@ -57,6 +57,11 @@
 			width: 0px;
 			background: #6adcfa;
 			border-radius: 5px;
+			opacity: 0;
+
+			&.show {
+				opacity: 1;
+			}
 
 			.wp-block-themeisle-blocks-progress-bar__progress__append {
 				display: flex;
@@ -124,13 +129,14 @@
 		font-weight: bold;
 		font-size: 13px;
 		color: #ffffff;
-		background: #6adcfa;
-		border-radius: 3px;
+		background: transparent;
+		border-radius: 5px 0px 0px 5px;
+		
 
-		&.transparent {
-			background: transparent;
+		&.highlight {
+			background: #6adcfa;
 			span {
-				background: transparent;
+				background: rgba(0, 0, 0, 0.1);
 			}
 		}
 
@@ -139,7 +145,7 @@
 			align-items: center;
 			border-radius: 5px 0px 0px 5px;
 			width: 100%;
-			background: rgba(0, 0, 0, 0.1);
+			background: transparent;
 			padding: 0 20px;
 			height: 30px;
 			line-height: 30px;
