Minor fix, title & percentage color v0.12.0

--- a/src/blocks/progress-bar/style.scss
+++ b/src/blocks/progress-bar/style.scss
@@ -75,8 +75,7 @@
 				margin-right: 5px;
 				height: 30px;
 				line-height: 30px;
-				color: #ffffff;
-				color: rgba(0, 0, 0, 0.4);
+				color: #fff;
 				opacity: 0;
 
 				&.show {
