--- a/src/blocks/accordion/tab/style.scss
+++ b/src/blocks/accordion/tab/style.scss
@@ -33,12 +33,14 @@ $toggler-background-color: rgb(255, 255, 255);
 		display: flex;
 		justify-content: center;
 		width: 100%;
+		margin-bottom: 0px;
+		cursor: pointer;
+
 
 		.wp-block-themeisle-blocks-accordion-block-tab-label {
 			display: block;
 			background-color: transparent;
 			color: #444;
-			cursor: pointer;
 			font-weight: bold;
 			width: inherit;
 			border: none;
@@ -46,6 +48,8 @@ $toggler-background-color: rgb(255, 255, 255);
 			outline: none;
 			font-size: 20px;
 			transition: 0.4s;
+			margin-top: 0px;
+			margin-bottom: 0px;
 
 			&.no-front-icon {
 				margin-left: 10px
