--- a/src/blocks/icon-list/item/style.scss
+++ b/src/blocks/icon-list/item/style.scss
@@ -1,17 +1,19 @@
 .wp-block-themeisle-blocks-icon-list-item {
 	display: inline-flex;
 	align-items: center;
-	margin-bottom: 10px;
+	transition: margin 0.10s linear;
 
 	.wp-block-themeisle-blocks-icon-list-item-title {
 		margin-top: 0px;
 		margin-bottom: 0px;
 		margin-left: 10px;
+		margin-right: 10px;
 
 		&-custom {
 			margin-top: 0px;
 			margin-bottom: 0px;
 			margin-left: 10px;
+			margin-right: 10px;
 		}
 		
 	}
