--- a/src/blocks/font-awesome-icons/style.scss
+++ b/src/blocks/font-awesome-icons/style.scss
@@ -2,6 +2,7 @@
 	text-align: center;
 
 	.wp-block-themeisle-blocks-font-awesome-icons-container {
-		display: inline-block;
+		display: inline-flex;
+		justify-content: center;
 	}
 }
