--- a/src/blocks/circle-counter/style.scss
+++ b/src/blocks/circle-counter/style.scss
@@ -4,16 +4,19 @@
     align-items: center;
     flex-direction: column;
 
+    :nth-child( 2 ) {
+        margin-top: 20px;
+    }
+
     .wp-block-themeisle-blocks-circle-counter-title__area {
         display: flex;
         justify-content: center;
         align-items: center;
     
         .wp-block-themeisle-blocks-circle-counter-title__value {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-weight: bold;
             text-align: center;
-            font-size: 35px;
+            font-size: 15px;
         }
     }
     
@@ -28,22 +31,22 @@
         
             .wp-block-themeisle-blocks-circle-counter-bg {
                 fill: none;
-                stroke: grey;
+                stroke: #4682b426;
             }
         
             .wp-block-themeisle-blocks-circle-counter-progress {
                 fill: none;
-                stroke: darkorange;
+                stroke: #3878ff;
                 transform-origin: center;
                 transform: rotateZ(-90deg);
+                stroke-linecap: round;
             }
     
             .wp-block-themeisle-blocks-circle-counter-text {
                 text-anchor: middle;
                 dominant-baseline: middle;
-                fill: darkorange;
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                font-size: 27px;
+                fill: #000000;
+                font-size: 15px;
             }
         } 
     }
