--- a/src/blocks/font-awesome-icons/style.scss
+++ b/src/blocks/font-awesome-icons/style.scss
@@ -4,5 +4,9 @@
 	.wp-block-themeisle-blocks-font-awesome-icons-container {
 		display: inline-flex;
 		justify-content: center;
+
+		svg {
+			width: 16px;
+		}
 	}
 }
