--- a/src/blocks/button-group/editor.scss
+++ b/src/blocks/button-group/editor.scss
@@ -44,6 +44,19 @@
 				}
 			}
 
+			svg {
+				fill: currentColor;
+				width: 16px;
+
+				&.margin-left {
+					margin-left: 10px;
+				}
+
+				&.margin-right {
+					margin-right: 10px;
+				}
+			}
+
 			.block-editor-rich-text__editable {
 				display: inline-block;
 				cursor: text;
@@ -58,4 +71,13 @@
 
 .block-editor-block-list__layout [data-type="themeisle-blocks/button"].block-editor-block-list__block:not([contenteditable]):focus::after {
 	box-shadow: none;
+}
+
+.editor-styles-wrapper {
+	.wp-block-button__link {
+		svg {
+			fill: currentColor;
+			width: 16px;
+		}
+	}
 }
