Fix CSS issues due to 5.6

--- a/src/blocks/plugin-card/editor.scss
+++ b/src/blocks/plugin-card/editor.scss
@@ -16,7 +16,7 @@
 				background: #ffffff;
 				position: relative;
 		
-				svg.dashicon {
+				.dashicon {
 					position: absolute;
 					margin: 12px;
 
