--- a/src/components/color-base-control/editor.scss
+++ b/src/components/color-base-control/editor.scss
@@ -1,6 +1,11 @@
 .wp-block-themeisle-blocks-color-base-control {
 	margin-top: 12px;
 
+	.components-base-control__label {
+		display: inline-block;
+		margin-bottom: 12px;
+	}
+
 	.component-color-indicator {
 		vertical-align: text-bottom;
 	}
