--- a/src/blocks/advanced-heading/editor.scss
+++ b/src/blocks/advanced-heading/editor.scss
@@ -33,9 +33,10 @@ span {
 			display: inline-block;
 			font-size: 12px;
 
-			svg {
+			.dashicon {
 				display: block;
 				margin: 0 auto;
+				font-size: 20px;
 			}
 		}
 	}
