--- a/src/blocks/google-maps/editor.scss
+++ b/src/blocks/google-maps/editor.scss
@@ -14,6 +14,10 @@
 			flex-wrap: wrap;
 			z-index: 1;
 
+			.components-base-control__field {
+				margin-right: 8px;
+			}
+
 			.components-placeholder__input {
 				input[type="text"] {
 					min-height: 36px;
