Change highlight tag
Changed highlight 'mark' with 'span.highlight' as suggested in https://github.com/Codeinwp/gutenberg-blocks/issues/518

--- a/src/blocks/advanced-heading/editor.scss
+++ b/src/blocks/advanced-heading/editor.scss
@@ -1,8 +1,4 @@
-span {
-	&.wp-block-themeisle-blocks-advanced-heading {
-		display: block;
-	}
-}
+@import 'style';
 
 .wp-block-themeisle-blocks-advanced-heading-header-panel {
 	&.is-opened {
