--- a/src/blocks/advanced-heading/style.scss
+++ b/src/blocks/advanced-heading/style.scss
@@ -2,4 +2,9 @@ span {
 	&.wp-block-themeisle-blocks-advanced-heading {
 		display: block;
 	}
+
+	&.highlight {
+		background-color: yellow;
+		color: black;
+	}
 }
