Fix ThemeIsle icons not appearing on webkit browsers

--- a/src/components/icon-picker-control/editor.scss
+++ b/src/components/icon-picker-control/editor.scss
@@ -22,6 +22,7 @@
 				}
 
 				svg {
+					width: 15px;
 					max-width: 15px;
 					margin-right: 5px;
 				}
@@ -98,6 +99,7 @@
 			}
 
 			svg {
+				width: 15px;
 				max-width: 15px;
 				line-height: 1.8;
 				margin-right: 5px;
