--- a/src/blocks/icon-list/editor.scss
+++ b/src/blocks/icon-list/editor.scss
@@ -1,5 +1,4 @@
-.wp-block-themeisle-blocks-icon-list { 
-	
+.wp-block-themeisle-blocks-icon-list {
 	display: flex;
 	flex-direction: column;
 
@@ -17,7 +16,7 @@
 		display: flex;
 		flex-direction: inherit;
 		align-items: inherit;
-		
+
 		.block-editor-block-list__layout {
 			display: flex;
 			flex-direction: inherit;
@@ -26,9 +25,31 @@
 
 			.block-editor-block-list__block {
 				margin: 0px;
-				@import './item/style.scss';
+
+				.wp-block-themeisle-blocks-icon-list-item {
+					display: inline-flex;
+					align-items: center;
+					transition: margin 0.10s linear;
+
+					.wp-block-themeisle-blocks-icon-list-item-title {
+						margin-top: 0px;
+						margin-bottom: 0px;
+						margin-left: 10px;
+						margin-right: 10px;
+
+						&-custom {
+							margin-top: 0px;
+							margin-bottom: 0px;
+							margin-left: 10px;
+							margin-right: 10px;
+						}
+					}
+
+					p {
+						margin-bottom: 0px;
+					}
+				}
 			}
 		}
 	}
-	
 }
