--- a/src/blocks/icon-list/style.scss
+++ b/src/blocks/icon-list/style.scss
@@ -3,7 +3,7 @@
 
 	&.is-style-vertical {
 		flex-direction: column;
-		
+
 		> *:not(:last-child) {
 			margin-bottom: 50px;
 		}
@@ -13,13 +13,32 @@
 		flex-wrap: wrap;
 		align-items: center;
 
-		
 		> *:not(:last-child) {
 			margin-right: 50px;
 		}
 	}
 
-	
-	
-	@import './item/style.scss';	
+	.wp-block-themeisle-blocks-icon-list-item {
+		display: inline-flex;
+		align-items: center;
+		transition: margin 0.10s linear;
+
+		.wp-block-themeisle-blocks-icon-list-item-title {
+			margin-top: 0px;
+			margin-bottom: 0px;
+			margin-left: 10px;
+			margin-right: 10px;
+
+			&-custom {
+				margin-top: 0px;
+				margin-bottom: 0px;
+				margin-left: 10px;
+				margin-right: 10px;
+			}
+		}
+
+		p {
+			margin-bottom: 0px;
+		}
+	}
 }
