--- a/src/blocks/icon-list/editor.scss
+++ b/src/blocks/icon-list/editor.scss
@@ -2,10 +2,6 @@
 	display: flex;
 	flex-direction: column;
 
-	&.is-style-vertical {
-		flex-direction: column;
-	}
-
 	&.is-style-horizontal {
 		flex-direction: unset;
 		flex-wrap: wrap;
@@ -27,22 +23,14 @@
 				margin: 0px;
 
 				.wp-block-themeisle-blocks-icon-list-item {
-					display: inline-flex;
+					display: flex;
 					align-items: center;
 					transition: margin 0.10s linear;
 
-					.wp-block-themeisle-blocks-icon-list-item-content {
-						margin-top: 0px;
-						margin-bottom: 0px;
-						margin-left: 10px;
-						margin-right: 10px;
-
-						&-custom {
-							margin-top: 0px;
-							margin-bottom: 0px;
-							margin-left: 10px;
-							margin-right: 10px;
-						}
+					.wp-block-themeisle-blocks-icon-list-item-content,
+					.wp-block-themeisle-blocks-icon-list-item-content-custom {
+						flex-grow: 1;
+						margin: 0 10px;
 					}
 
 					p {
